create-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: staging
spec: {}
status: {}
